Windows UI Layouts Lock, unlock, pref, about fixed

--- a/NLock_with_setup/NLock_with_setup/NLockFile/App.config
+++ b/NLock_with_setup/NLock_with_setup/NLockFile/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <configSections>
@@ -10,7 +10,7 @@
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="${LOCALAPPDATA}\Neurotechnology\NLock\log.log" />
+      <param name="File" value="${LOCALAPPDATA}\CompanyNeurotechnology\NLock\log.log" />
       <param name="AppendToFile" value="true" />
       <param name="rollingStyle" value="Composite" />
       <param name="maxSizeRollBackups" value="10" />
