--- a/NLock_with_setup/NLock_with_setup/NLockFile/App.config
+++ b/NLock_with_setup/NLock_with_setup/NLockFile/App.config
@@ -7,6 +7,9 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="NLock.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="NLock.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -56,6 +59,34 @@
       <setting name="compressionLevel" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="LockFormWidth" serializeAs="String">
+        <value>356</value>
+      </setting>
+      <setting name="LockFormHeight" serializeAs="String">
+        <value>311</value>
+      </setting>
+      <setting name="UnlockFormWidth" serializeAs="String">
+        <value>485</value>
+      </setting>
+      <setting name="UnlockFormHeight" serializeAs="String">
+        <value>303</value>
+      </setting>
+      <setting name="UnlockFormWidthDefault" serializeAs="String">
+        <value>485</value>
+      </setting>
+      <setting name="UnlockFormHeightDefault" serializeAs="String">
+        <value>303</value>
+      </setting>
     </NLock.Properties.Settings>
   </userSettings>
+  <applicationSettings>
+    <NLock.Properties.Settings>
+      <setting name="LockFormWidthDefault" serializeAs="String">
+        <value>356</value>
+      </setting>
+      <setting name="LockFormHeightDefault" serializeAs="String">
+        <value>311</value>
+      </setting>
+    </NLock.Properties.Settings>
+  </applicationSettings>
 </configuration>
