--- a/NLock_with_setup/NLock_with_setup/NLockFile/App.config
+++ b/NLock_with_setup/NLock_with_setup/NLockFile/App.config
@@ -13,7 +13,7 @@
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="${LOCALAPPDATA}\CompanyNeurotechnology\NLock\log.log" />
+      <param name="File" value="${LOCALAPPDATA}\Neurotechnology\NLock\log.log" />
       <param name="AppendToFile" value="true" />
       <param name="rollingStyle" value="Composite" />
       <param name="maxSizeRollBackups" value="10" />
