--- a/NLock_with_setup/NLock_with_setup/NLockFile/App.config
+++ b/NLock_with_setup/NLock_with_setup/NLockFile/App.config
@@ -39,7 +39,7 @@
     <root>
       <level value="ALL" />
       <appender-ref ref="LogFileAppender" />
-      <appender-ref ref="ConsoleAppender" />
+      <!--<appender-ref ref="ConsoleAppender" />-->
     </root>
   </log4net>
 
